--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,11 @@
 }
 
 .PrivateTabIndicator-colorSecondary-3 {
+  background-
+  color: #000000;
+}
+
+.MuiButton-containedPrimary {
+  color: #fff;
   background-color: #000000;
 }
